Updated audio html interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block play %}
+<h1>Audio Messages</h1>
 {% for i in range(music_files_number) %}
     <p><a href="/{{ music_files[i] }}"> {{ i+1 }}) {{ music_files[i] }} </a></p>
 {% endfor %}
